<resources>
    <string name="app_name">Fast</string>
    <string name="eletroNome">Name</string>
    <string name="eletroVoltagem">Voltage</string>
    <string name="eletroVoltagem110">110</string>
    <string name="eletroVoltagem220">220</string>
    <string name="eletroPotencia">Potency</string>
    <string name="eletroTempo">Daily Use Time (hours)</string>
    <string name="eletroLimpar">Clean</string>
    <string name="eletroSalvar">Save</string>
    <string name="eletroPergunta">Check the option below to activate the device</string>
    <string name="eletroRespostaSim">Activate</string>
    <string name="eletroCadastro">Home Appliance Register</string>
    <string name="camposLimpos">Successfully Cleaned Fields</string>
    <string name="sucessoCadastro">Successfully Registered</string>
    <string name="erroCampos">Please, fill in the fields correctly.</string>
    <string name="eletroSelecionado">selected</string>
    <string name="eletroEstado">Condition</string>
    <string name="nomeAluno">Henrique Bezerra Lucas</string>
    <string name="emailAluno">henriquelucas@alunos.utfpr.edu.br</string>
    <string name="cursoAluno">Software Engineering</string>
    <string name="sobre">About</string>
    <string name="adicionar">Add</string>
    <string name="sem_nome">Name not foud</string>
    <string name="tempo">Time</string>
    <string name="lista_title">Fast List</string>
    <string name="cadastro_title">Home Appliance Register</string>
    <string name="app_descricao">FAST is an app that allows you to predict how much of eletric energy your residence it\'s costing , so it can help you plan and control yours finances better.</string>
    <string name="logo_descricao">Logo of the Federal Technological University of Paraná with yellow, white and black details.</string>
    <string name="edicaoEletro">Editing</string>
    <string name="editar">Edit</string>
    <string name="excluir">" Delete"</string>
    <string name="configuracoes">Configuration</string>
    <string name="ordenacao">List Sorting</string>
    <string name="potencia">Potency</string>
    <string name="potencia_crescente">Potency - Ascending</string>
    <string name="potencia_decrescente">Potency - Descending</string>
    <string name="alfabetica_crescente">Alphabetical - Ascending</string>
    <string name="alfabetica_decrescente">Alphabetical - Descending</string>
    <string name="alfabetica">Alphabetical</string>
    <string name="confirmacao">Confirmation</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="ok">Ok</string>
    <string name="aviso">Warning</string>
    <string name="permanentemente">" permanently?"</string>
    <string name="nome_do_eletrodomestico">Home appliance name</string>
    <string name="novo_local">New place</string>
    <string name="Data">Date</string>
    <string name="valor">Price</string>
    <string name="ativado">Activated</string>
    <string name="desativado">Disabled</string>
</resources>