<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.appAutoria">

    <ImageView
        android:id="@+id/imageViewUTFPR"
        android:layout_width="329dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo_descricao"
        tools:layout_editor_absoluteY="51dp"
        tools:srcCompat="@drawable/logoutfpr" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/cursoAluno" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="200dp"
        android:layout_height="17dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/nomeAluno"
        tools:layout_editor_absoluteY="19dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="220dp"
        android:layout_height="15dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/emailAluno"
        tools:layout_editor_absoluteY="37dp" />

    <TextView
        android:id="@+id/textViewDescricao"
        android:layout_width="326dp"
        android:layout_height="93dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/app_descricao"
        tools:layout_editor_absoluteY="179dp" />

</android.widget.LinearLayout>